Add forecasting of next transaction
