# flextools_forecasting/forecasting/blueprints/api/__init__.py
@@ -1,6 +1,7 @@
 from flask import Blueprint
 from flask_restx import Api
 
+from .transaction import api_namespace as transaction_namespace
 
 api_blueprint = Blueprint('api', __name__, url_prefix='/api/v1')
 api = Api(
@@ -9,3 +10,5 @@ api = Api(
     title='ForecastingAPI', 
     description='A simple API for accessing the Forecasting system.'
 )
+
+api.add_namespace(transaction_namespace)
